# current-23-talk

./: .gitignore  GrpcKitToolsDockerfile  Makefile  README.md  buf.yaml  build-toolchain.sh  check_compatibility.sh  deploy.sh  omniproto.yml
cpp-protobuf-models/: CMakeLists.txt  FindProtobufModels.cmake  conanfile.py
golang-protobuf-models/: go.mod
protobuf/com/bbrownsound/proto/: scan_event.proto
python-protobuf-models/: README.md  setup.py
scala-protobuf-models/: .jvmopts  .scala-steward.conf  .scalafix.conf  .scalafmt.conf  README.md  build.sbt
scala-protobuf-models/project/: Dependencies.scala  plugins.sbt
